--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.3"
+    "chai": "4.3.6",
+    "express": "4.17.3",
+    "mocha": "9.2.1",
+    "sinon": "13.0.1"
   }
 }
