--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "4.3.6",
+    "ejs": "3.1.6",
     "express": "4.17.3",
     "mocha": "9.2.1",
     "sinon": "13.0.1"
